# tiddlywiki-app

./: .gitignore  .npmrc  LICENSE  README.md  README.zh-CN.md  electron-builder.json  electron-builder.json5  electron-builder.ts  electron-extra.d.ts  index.html  jsconfig.json  package.json  pnpm-lock.yaml  tiddlywiki.info  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  page.yml
@types/: electron-extra.d.ts  i18next.d.ts  types.d.ts
_include/: head-custom.html
_layouts/: default.html
assets/: README.md
aur/: PKGBUILD  README.md  build.sh
patches/: tw5-typed.patch
public/: find.html  input.html
public/lib/: confetti.min.js  sweetalert.min.js
resources/pngquant/: README.md
scripts/: app.js  createSymbolink.js  dialog.js  generate-locales.js  menu.js  minify-tw.js  svg2png.js
scripts/locales/: app.js  log.js  menu.js  settings.js  tray.js
src/: sidebar.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/@types/: i18next.d.ts
src/i18n/: index.js  index.ts
src/lib/: sweetalert.min.js
src/main/: index.js  index.ts  ipc.ts  update.js
src/preload/: index.js  index.ts
src/renderer/: index.js  index.ts  render.js
src/utils/: checkEmptyDir.js  checkEmptyDir.ts  checkUpdate.ts  config.js  config.ts  contextmenu.js  contextmenu.ts  convertPathToVSCodeUri.ts  createTray.ts  downloadTpl.ts  generateId.ts  generateRandomPort.ts  (+24 more)
test/: electron.test.ts
tiddlers/: $__DefaultTiddlers.tid  $__SiteSubtitle.tid  $__SiteTitle.tid  $__StoryList.tid  $__config_FileSystemPaths.tid  README.zh-CN.md
(+26 files in other folders)
