[package]
name = "tiddlywiki-app"
version = "1.0.0"
description = "一个基于 Tauri 的 TiddlyWiki 桌面应用"
authors = ["oeyoews <jyao4783@gmail.com>"]
license = "MIT"
repository = "https://github.com/oeyoews/tiddlywiki-app"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.10", features = ["shell-execute", "shell-sidecar", "shell-open", "fs-all", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true